--- a/modules/admin_manual/pages/configuration/user/user_management.adoc
+++ b/modules/admin_manual/pages/configuration/user/user_management.adoc
@@ -33,11 +33,11 @@ _E-Mail_::
   The admin sets the new user’s E-Mail. The user then gets an E-Mail to set his Password.
   Both the user and the admin can change the user’s E-Mail at anytime.
 _Groups_::
-  You may create groups, and assign group memberships to users. By
+  You may create system groups, and assign system group memberships to users. By
   default new users are not assigned to any groups.
 _Group Admin_::
-  Group admins are granted administrative privileges on specific groups,
-  and can add and remove users from their groups.
+  Group admins are granted administrative privileges on system groups,
+  and can add new users and remove existing users from those groups.
 _Quota_::
   The maximum disk space assigned to each user. Any user that exceeds
   the quota cannot upload or sync data. You have the option to include
@@ -110,7 +110,7 @@ access and modify all settings. To assign the ownCloud Administrators
 role to a user, simply add them to the `admin` group.
 
 * *Group Administrators*. Group administrators have the rights to create,
-edit and delete users in their assigned groups. Use the dropdown menus in the Group Admin column to assign group admin privileges.
+edit and delete users in their assigned system (non-LDAP) groups. Use the dropdown menus in the Group Admin column to assign group admin privileges.
 
 == Managing Groups
 
