--- a/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
@@ -1044,11 +1044,15 @@ process.
 ....
 
 === Define ownCloud operation modes
-This defines the mode of operations. The default value is 'single-instance'
+This defines the mode of operations. The default value is `single-instance`
 which means that ownCloud is running on a single node, which might be the
 most common operations mode. The only other possible value for now is
-'clustered-instance' which means that ownCloud is running on at least 2
+`clustered-instance` which means that ownCloud is running on at least 2
 nodes. The mode of operations has various impact on the behavior of ownCloud.
+The primary impact is that clustered instances won't download apps form the 
+marketplace and install in one server. Instead the admin has to ensure that
+this happens manually on all servers. Some applies to config.php configuration
+settings done via `occ`.
 
 ==== Code Sample
 
