--- a/modules/admin_manual/pages/configuration/user/login_policies.adoc
+++ b/modules/admin_manual/pages/configuration/user/login_policies.adoc
@@ -9,11 +9,11 @@
 
 Login policies will emit a `failed login` event if the user isn't allowed to login due to a reject rule.
 
-== Usecases
+== Use Cases
 
-Login policies can be used to restrict members of particular groups to use only particular login types. This is especially true for guest users as they do not have an ownCloud account and cannot be validated via openidconnect but can login using their email and password.
+Login policies can be used to restrict members of particular groups to use only particular login types. This is especially true for guest users as they do not have an ownCloud account and cannot be validated via OpenID Connect but can log in using their email and password.
 
-For example, a desired rule could be that only the groups `guests` and `admin` can login to the instance via username + password, while the rest of the users must login through other mechanisms such as openidconnect.
+For example, a desired rule could be that only the groups `guests` and `admin` can log in to the instance via username + password, while the rest of the users must login through other mechanisms such as OpenID Connect.
 
 == Configuration
 
@@ -28,7 +28,7 @@ To enable login policies, use the following example:
 'loginPolicy.order' => ['OC\Authentication\LoginPolicies\GroupLoginPolicy'],
 ----
 
-After enabling the `loginPolicy.order`, the configuration of the `groupLoginPolicy` can be made. The key definition below must be set according the needs and the description in xref:configuration/server/config_sample_php_parameters.adoc#configuration-of-the-group-login-policy[Configuration of the Group Login Policy]:
+After enabling the `loginPolicy.order`, the configuration of the `groupLoginPolicy` can be made. The key definition below must be set according to the needs and the description in xref:configuration/server/config_sample_php_parameters.adoc#configuration-of-the-group-login-policy[Configuration of the Group Login Policy]:
 
 [source,php]
 ----
@@ -45,7 +45,7 @@ The following example gives an idea of how to configure the `Group Login Policy`
 * Users belonging to the admin group won't be able to access via token (app password), while the rest of the users can.
 * Only users from group1 and group2 are allowed to access through username + password, and users from group3 will be rejected.
 * If a user is a member of both an allowOnly group and a reject group, rejection will take priority. This means that even if user1 is a member of group1 he won't be able to access if he's also a member of group3.
-* Only members of group4 can login using OIDC.
+* Only members of group4 can log in using OIDC.
 
 [source,php]
 ----
