--- a/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
@@ -999,10 +999,10 @@ Available values:
 'versions_retention_obligation' => 'auto',
 ....
 
-=== Save Additional Metadata for Versions
-Save additional metadata (author, version, tag, etc.) of each version of uploaded and edited files.
+=== Save additional metadata for versions
+Save additional metadata (author, version tag, etc.) of each version of uploaded and edited files.
 
-WARNING: This feature CANNOT be temporarily disabled once it has been enabled.
+WARNING: This feature CANNOT be temporarily disabled once enabled.
 Disabling and re-enabling would require a repair job that erases all extended versions metadata.
 WARNING: This does not work for S3 storage backends.
 
