also mention user guide
Should the entry page of the server guide only address admins and devs?
I'd assume there are at least as many end users who end up here...

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,3 +1,4 @@
 = Introduction to ownCloud Server
 
 Welcome to the ownCloud Server documentation. These documents provide an xref:admin_manual:index.adoc[admin guide] with information for installation, configuration and administrative tasks as well as documentation for xref:developer_manual:index.adoc[developers].
+A [web UI](https://doc.owncloud.com/webui/next/) guide describes activities for end users.
