add notice about ImageMagick's scripting language (MSL)

--- a/modules/admin_manual/pages/installation/manual_installation/manual_imagick7.adoc
+++ b/modules/admin_manual/pages/installation/manual_installation/manual_imagick7.adoc
@@ -197,6 +197,8 @@ convert identify -list format
 
 If you have changed configuration settings, you can reuse them for ImageMagick 7. Copy either the changed contend of the files in question or the complete files from `/etc/ImageMagick-6.backup` to `/etc/ImageMagick-7`. You may want to keep a backup of the original configuration files.
 
+IMPORTANT: Make sure to disable ImageMagick's scripting language in `/etc/ImageMagick-7/policy.xml` by adding this policy: `<policy domain="coder" rights="none" pattern="MSL" />`. For more context you can read about https://imagetragick.com[ImageTragick].
+
 === Install the New ImageMagick PHP Wrapper
 
 The new `php-imagick` wrapper is installed via PECL and uses the recently installed ImageMagick-7 version as base.
